# C-software-render

./: CMakeLists.txt  Screen.cpp  Screen.h  main.cpp
